<resources>
    <string name="app_name">QuizProject</string>
    <string name="question_1">Question #1</string>
    <string name="basketball_rules_quizzer">Basketball Rules Quizzer</string>
    <string name="_1">1.</string>
    <string name="in_which_country_is_basketball_a_major_sport">In which country is basketball a major sport?</string>
    <string name="canada">Canada</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states_of_america">United States of America</string>
    <string name="_2">2.</string>
    <string name="what_is_the_name_of_the_governing_body_of_the_world_top_basketball_league">What is the name of the governing body of the world top basketball league?</string>
    <string name="nba">NBA</string>
    <string name="nhl">NHL</string>
    <string name="mlb">MLB</string>
    <string name="_3">3.</string>
    <string name="what_is_it_called_when_a_player_scores_a_point">What is it called when a player scores a point?</string>
    <string name="goal">Goal</string>
    <string name="a_basket">A Basket</string>
    <string name="touchdown">Touchdown</string>
    <string name="_4">4.</string>
    <string name="how_many_points_is_a_shot_worth_when_inside_the_oppositions_semi_circle">How many points is a shot worth when inside the oppositions semi-circle?</string>
    <string name="_33">3</string>
    <string name="_11">1</string>
    <string name="_22">2</string>
    <string name="_5">5.</string>
    <string name="how_many_points_are_awarded_for_a_score_from_outside_the_oppositions_semi_circle">How many points are awarded for a score from outside the oppositions semi-circle?</string>
    <string name="_222">2</string>
    <string name="_111">1</string>
    <string name="_333">3</string>
    <string name="_66">6.</string>
    <string name="when_in_possesion_of_the_ball_what_must_a_player_do">When in possesion of the ball, what must a player do?</string>
    <string name="stand_still">Stand still</string>
    <string name="bounce_the_ball_while_running">Bounce the ball while running</string>
    <string name="run_with_the_ball">Run with the ball</string>
    <string name="_7">7.</string>
    <string name="what_is_the_name_of_the_ball_used_in_basketball">What is the name of the ball used in Basketball?</string>
    <string name="answer_here">Answer here..</string>
    <string name="_8">8.</string>
    <string name="what_happens_if_a_player_fails_to_dribble_while_in_moving_with_the_ball_check_all_that_apply">What happens if a player fails to dribble while in moving with the ball? Check all that apply.</string>
    <string name="possession_is_given_to_the_other_team">Possession is given to the other team</string>
    <string name="the_team_that_had_the_ball_no_longer_has_it">The team that had the ball no longer has it.</string>
    <string name="nothing">Nothing</string>
    <string name="they_get_a_trophy">They get a Trophy</string>
    <string name="it_s_a_travel">It\'s a Travel</string>
    <string name="_9">9.</string>
    <string name="how_is_a_basketball_game_started">How is a Basketball game started?</string>
    <string name="the_ball_is_thrown_up_in_the_air_by_the_red_inbetween_one_player_from_each_team_and_they_have_to_try_and_knock_it_to_their_teammates">The ball is thrown up in the air by the red inbetween one player from each team, and they have to try and knock it to their teammates.</string>
    <string name="kick_off">Kick-Off</string>
    <string name="the_ball_is_bounced_by_the_referee_in_between_one_player_from_each_team">The ball is bounced by the referee in between one player from each team.</string>
    <string name="_10">10</string>
    <string name="how_many_pllayers_are_allowed_on_the_court_for_each_team">How many pllayers are allowed on the court for each team?</string>
    <string name="_678">6</string>
    <string name="_578">5</string>
    <string name="_444">4</string>
    <string name="submit">Submit</string>
    <string name="how_many_players_are_allowed_on_the_court_for_each_team">How many players are allowed on the court for each team?</string>
    <string name="_2222">2.</string>
    <string name="_4532">4.</string>
    <string name="_356">3.</string>
    <string name="_11164">1.</string>
    <string name="_2134">2.</string>
    <string name="_3124">3.</string>
    <string name="_45312">4.</string>
</resources>
